feat: add delete and update handlers for users and responsibles
