# services/gateway/internal/models/models.go
@@ -164,6 +164,11 @@ type PorterCreateRequest struct {
 	Password string `json:"password" validate:"required,min=6"`
 }
 
+type PorterUpdateRequest struct {
+	Username string `json:"username" validate:"required,min=3,max=30"`
+	Email    string `json:"email" validate:"required,email"`
+}
+
 type MeResponse struct {
 	ID       string `json:"id"`
 	Username string `json:"username"`
